--- a/AFISBIO_paper_final.ipynb
+++ b/AFISBIO_paper_final.ipynb
@@ -44,7 +44,7 @@
     "plt.rcParams[\"figure.figsize\"] = (15, 6.75)\n",
     "plt.rcParams[\"font.family\"] = \"Courier New\"\n",
     "plt.rcParams[\"axes.titleweight\"] = \"bold\"\n",
-    "plt.style.use(\"default_light\")\n",
+    "plt.style.use(\"default_light.mplstyle\")\n",
     "\n",
     "pd.set_option(\"display.max_rows\", 1000)\n",
     "warnings.filterwarnings(\"ignore\")\n",
